--- a/JHSchool.Permrec/JHSchool.Permrec.csproj
+++ b/JHSchool.Permrec/JHSchool.Permrec.csproj
@@ -118,7 +118,7 @@
       <HintPath>Library\IntelliSchool.DSA.ClientFramework.dll</HintPath>
     </Reference>
     <Reference Include="IRewriteAPI_JH">
-      <HintPath>..\..\JHCore\IRewriteAPI_JH\bin\Debug\IRewriteAPI_JH.dll</HintPath>
+      <HintPath>Library\IRewriteAPI_JH.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="JHSchool">
