2017/4/19 穎驊更新 [10-06][06] 局端service增加國籍欄位 項目完成，加入 家長資料項目 國籍欄位驗證

--- a/JHSchool.Permrec/JHSchool.Permrec.csproj
+++ b/JHSchool.Permrec/JHSchool.Permrec.csproj
@@ -109,6 +109,10 @@
       <HintPath>Library\FISCA.Presentation.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="FISCA.UDT">
+      <HintPath>Library\FISCA.UDT.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="Framework">
       <HintPath>Library\Framework.dll</HintPath>
       <Private>False</Private>
@@ -248,6 +252,7 @@
     <Compile Include="ClassExtendControls\SelectExamPrint.Designer.cs">
       <DependentUpon>SelectExamPrint.cs</DependentUpon>
     </Compile>
+    <Compile Include="DAO\UDT_NationalityMapping.cs" />
     <Compile Include="EduAdminExtendCotnrols\ClassUpgrade\ClassItem.cs" />
     <Compile Include="EduAdminExtendCotnrols\ClassUpgrade\ClassUpgradeForm.cs">
       <SubType>Form</SubType>
@@ -672,6 +677,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Resources\Warning_Icon_round.ico" />
     <None Include="Resources\user_write_64.png" />
     <None Include="Resources\world_zoom_64.png" />
     <None Include="Resources\defaultsearchimage.png" />
