2018/11/29 穎驊因應 高雄小組項目 [09-01][??] 系統報表特殊字問題、[09-17][03]特殊字 修正了 國中學籍模組 ， 支援新版的 Aspose.Word API 使報表列印特殊字學生不再有錯誤當機，本次更新的功能: 學生證 、學生證(舊)、畢業證書 、畢業證明書、在學證明書(無成績) 、轉出回條、休學證明書、轉學證明書

--- a/JHSchool.Permrec/JHSchool.Permrec.csproj
+++ b/JHSchool.Permrec/JHSchool.Permrec.csproj
@@ -66,14 +66,14 @@
       <HintPath>Library\Aspose.Cells.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="Aspose.Words, Version=9.0.0.0, Culture=neutral, PublicKeyToken=716fcc553a201e56">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>Library\Aspose.Words.dll</HintPath>
+    <Reference Include="Aspose.Words_201402">
+      <HintPath>Library\Aspose.Words_201402.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="DevComponents.DotNetBar2, Version=7.9.0.5, Culture=neutral, PublicKeyToken=7eb7c3a35b91de04, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\LibraryProject\DevComponents.DotNetBar2.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="FISCA, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -607,6 +607,7 @@
     <EmbeddedResource Include="StudentExtendControls\Reports\RptResource.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>RptResource.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="StudentExtendControls\Reports\StudentAtSchoolCertificateForm.resx">
       <DependentUpon>StudentAtSchoolCertificateForm.cs</DependentUpon>
