2019/6/5 俊緯更新 更新學校清單及修復參考

--- a/JHPermrec.UpdateRecord/JHPermrec.UpdateRecord/JHPermrec.UpdateRecord.csproj
+++ b/JHPermrec.UpdateRecord/JHPermrec.UpdateRecord/JHPermrec.UpdateRecord.csproj
@@ -102,9 +102,9 @@
       <HintPath>Library\IntelliSchool.DSA.ClientFramework.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="IRewriteAPI_JH">
-      <HintPath>..\..\..\JHCore\IRewriteAPI_JH\bin\Debug\IRewriteAPI_JH.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="IRewriteAPI_JH, Version=1.0.0.9, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Library\IRewriteAPI_JH.dll</HintPath>
     </Reference>
     <Reference Include="JHSchool, Version=1.0.3.4, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -715,6 +715,7 @@
     <Content Include="Library\Framework.pdb" />
     <Content Include="Library\IntelliSchool.DSA.ClientFramework.dll" />
     <Content Include="Library\IntelliSchool.DSA.ClientFramework.xml" />
+    <Content Include="Library\IRewriteAPI_JH.dll" />
     <Content Include="Library\JHSchool.Affair.dll" />
     <Content Include="Library\JHSchool.Affair.pdb" />
     <Content Include="Library\JHSchool.Data.dll" />
