--- a/JHPermrec.UpdateRecord/JHPermrec.UpdateRecord/JHPermrec.UpdateRecord.csproj
+++ b/JHPermrec.UpdateRecord/JHPermrec.UpdateRecord/JHPermrec.UpdateRecord.csproj
@@ -680,9 +680,12 @@
     <None Include="GovernmentalDocument\GDResources\JUpdateStudentPermrecTemplate.xls" />
     <None Include="GovernmentalDocument\GDResources\JUpdateStudentPermrecTemplate_KH.xls" />
     <None Include="GovernmentalDocument\GDResources\TaiChung\JEnrollmentListTemplate_TaiChung.xls" />
+    <None Include="GovernmentalDocument\GDResources\TaiChung\JExtendListTemplate_TaiChung.xls" />
     <None Include="GovernmentalDocument\GDResources\TaiChung\JGraduateListTemplate_TaiChung.xls" />
+    <None Include="GovernmentalDocument\GDResources\TaiChung\JResumeListTemplate_TaiChung.xls" />
+    <None Include="GovernmentalDocument\GDResources\TaiChung\JTransfer01ListTemplate_TaiChung.xls" />
     <None Include="GovernmentalDocument\GDResources\TaiChung\JTransferListTemplate_TaiChung.xls" />
-    <None Include="Resources\台中轉入Template.xls" />
+    <None Include="GovernmentalDocument\GDResources\TaiChung\JUpdateStudentPermrecListTemplate_TaiChung.xls" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="GovernmentalDocument\GDResources\btnItemNameList.Image.png" />
